# wav2mp3

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Wav2mp3Test.vcxproj  wav2mp3.sln  wav2mp3.vcxproj
src/: encoder.cpp  encoder.h  encoding_item.cpp  encoding_item.h  encoding_queue.cpp  encoding_queue.h  encoding_thread.cpp  encoding_thread.h  encoding_thread_base.cpp  encoding_thread_base.h  encoding_thread_posix.cpp  encoding_thread_posix.h  encoding_threads_pool.cpp  encoding_threads_pool.h  file_helper.cpp  file_helper.h  file_helper_win.cpp  main.cpp  string_type.h  wav_headers.h
